--- a/smartHouse/src/main/resources/application.properties
+++ b/smartHouse/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 
 spring.jpa.hibernate.ddl-auto=update
+
+
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+sendgrid.api.key=YOUR_SENDGRID_API_KEY
