--- a/smartHouse/src/main/resources/application.properties
+++ b/smartHouse/src/main/resources/application.properties
@@ -7,11 +7,16 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 
 
-spring.mail.host=smtp.example.com
+#spring.mail.host=smtp.yahoo.com
+#spring.mail.port=587
+#spring.mail.username=popokatepetlovi@yahoo.com
+#spring.mail.password=mejlzakts
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.mail.host=smtp.office365.com
 spring.mail.port=587
-spring.mail.username=your-email@example.com
-spring.mail.password=your-password
+spring.mail.username=sveisvasta2024@outlook.com
+spring.mail.password=mejlzaKTS666!!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
-sendgrid.api.key=YOUR_SENDGRID_API_KEY
