--- a/smartHouse/pom.xml
+++ b/smartHouse/pom.xml
@@ -64,10 +64,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.sendgrid</groupId>
-			<artifactId>sendgrid-java</artifactId>
-			<version>4.9.3</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+
 
 	</dependencies>
 
